--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,85 @@ html {
 }
 
 body {
+	background-color: rgb(123, 40, 221);
 	font-size: 1.6rem;
 	color: #333;
+}
+
+.main_body {
+	padding: 6rem 4rem;
+	color: #bde0fe;
+	min-height: 100dvh;
+	width: 100%;
+}
+#clock {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.clock_container {
+	padding: 0rem 0rem;
+	width: 65rem;
+	color: #333;
+	box-shadow: #263753 0px 0px 10px;
+}
+.clock_container > * {
+	margin-bottom: 5rem;
+}
+
+.clock_counter {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.clock_header {
+	padding: 2rem 4rem;
+	background-color: #ffffff;
+	border-radius: 15px;
+	width: 100%;
+	font-size: 10rem;
+}
+
+.clock_wrapper {
+	position: relative;
+	display: block;
+}
+
+.separator {
+	position: absolute;
+	top: 50%;
+	right: -40%;
+	transform: translateY(-57%);
+}
+
+.clock_button {
+	padding: 2rem;
+	display: flex;
+	justify-content: space-around;
+	align-self: start;
+}
+
+.btn {
+	text-transform: capitalize;
+	padding: 1rem 3rem;
+	background-color: #723bb1;
+	color: #ffffff;
+	border-radius: 8px;
+	font-size: 2rem;
+	outline: none;
+	border: none;
+	cursor: pointer;
+}
+
+.clock_header-lap {
+	padding: 1rem 3rem;
+	width: 78%;
+	margin-inline: auto;
+	font-size: 7rem;
+}
+
+.clock_lap > * {
+	margin-bottom: 1rem;
 }
